--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <body>
     <div class="centered-container">
         <div class="hover-container">
-            <img src="https://i.pinimg.com/736x/ae/af/03/aeaf03e8b54ea593455093cdcc07abaa.jpg" alt="Sample Image">
-            <button class="hover-button" onclick="window.open('https://www.youtube.com/watch?v=92a7Hj0ijLs', '_blank')">Trailer</button>
+            <img src="https://www.intofilm.org/intofilm-production/1058/scaledcropped/3000x1688/resources/1058/ponyo-header-image.jpg" alt="Sample Image">
+            <button class="hover-button" onclick="window.open('https://www.youtube.com/watch?v=CsR3KVgBzSM&t=22s', '_blank')">Trailer</button>
         </div>
     </div>
 </body>
